# -----------------------------------------------------------------------------
# SSG - A lightning-fast static site generator (SSG) optimised for search engine visibility (SEO) and compliant with WCAG 2.1 Level AA accessibility standards.
# -----------------------------------------------------------------------------

[package]
# General project metadata
name = "ssg"                            # The name of the library
version = "0.0.35"                      # The version of the library
authors = ["SSG Contributors"]     # The authors of the library
edition = "2021"                        # The edition of the library
rust-version = "1.88.0"                 # Minimum supported Rust version (set by time-macros, staticdatagen, oxc_*)
license = "MIT OR Apache-2.0"           # Dual licensing strategy
description = """
A Content-First Open Source Static Site Generator (SSG) crafted in Rust.
"""
homepage = "https://github.com/sebastienrousseau/shokunin" # The project's homepage
documentation = "https://docs.rs/ssg" # Doc URL
repository = "https://github.com/sebastienrousseau/shokunin"
readme = "README.md"                    # The README file
build = "build.rs"                      # The build script

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------

# Crates.io categories
categories = [
    "command-line-utilities",
    "parsing",
    "template-engine",
    "web-programming",
]

# Keywords for easier discoverability on Crates.io
keywords = ["cli", "generator", "site", "ssg", "static"]

# Excluding unnecessary files from the package
exclude = [
    "/.git/*",                          # Exclude version control files
    "/.github/*",                       # Exclude GitHub workflows
    "/.gitignore",                      # Ignore Git ignore file
    "/.vscode/*"                        # Ignore VSCode settings
]

# Including necessary files in the package
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/content/**",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/template/**",
    "/tests/**",
]


# -----------------------------------------------------------------------------
# Library Information
# -----------------------------------------------------------------------------

# The library file that contains the main logic for the binary.
[lib]
name = "ssg"                            # Internal name of the library
path = "src/lib.rs"                     # Path to the library entry point

# The main file that contains the entry point for the binary.
[[bin]]
name = "ssg"                            # Name of the binary
path = "src/main.rs"                    # Path to the binary entry point

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------
[features]
# Optional features that can be enabled or disabled.
default = ["async", "tokio", "tera-templates", "image-optimization"]
async = ["tokio"]                       # This enables tokio when the async feature is enabled
cli = []                                # Enable command-line interface support
benchmark = []                          # Enable benchmark-specific functionality
tera-templates = ["tera"]               # Tera templating engine with inheritance, loops, conditionals
image-optimization = ["image"]          # Image optimization with WebP output and responsive srcset
test-fault-injection = ["fail/failpoints"]  # Test-only fault injection for fs error paths

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------
[build-dependencies]
# Dependencies for the build script, used for pre-compilation tasks.
version_check = "0.9.5"                   # Ensures that a compatible Rust version is used

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------
[dev-dependencies]
# Dependencies required for testing and development.
criterion = "0.8.2"                       # Benchmarking library to test performance
lazy_static = "1.5.0"                      # Static variables for lazy evaluation
serial_test = "3.2"                        # Serialise fail-rs failpoint tests so they don't race

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
[dependencies]
# Required dependencies for building and running the project.
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "cargo", "env"] }
colored = "3.1.1"
dtt = "0.0.9"
env_logger = "0.11.10"
http-handle = "0.0.4"
indicatif = { version = "0.18.4", features = ["rayon"] }
log = { version = "0.4.29", features = ["std"] }
once_cell = "1.21.4"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
staticdatagen = "0.0.8"
tempfile = "3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
tokio = { version = "1.51.1", features = ["full"], optional = true }
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }

fail = "0.5"                              # Fault injection (no-op unless feature flag enables it)

# Optional dependencies (feature-gated)
tera = { version = "1", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }

# Owned crate for frontmatter parsing
frontmatter-gen = "0.0.5"

# Platform-specific dependency for Unix with OpenSSL
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl = { version = "0.10.75", features = ["vendored"] }

# -----------------------------------------------------------------------------
# Criterion Benchmark
# -----------------------------------------------------------------------------
[[bench]]
# Benchmarking configuration for performance testing.
name = "bench"                              # Name of the benchmark
harness = false                             # Disable the default benchmark harness (used by Criterion)

# -----------------------------------------------------------------------------
# Examples
# -----------------------------------------------------------------------------
[[example]]
# Basic example configuration for showcasing the library.
name = "basic"                            # Name of the example
path = "examples/basic_example.rs"        # Path to the example file

[[example]]
# Quickstart example configuration for showcasing the library.
name = "quickstart"                       # Name of the example
path = "examples/quickstart_example.rs"   # Path to the example file

[[example]]
# Multilingual example configuration for showcasing the library.
name = "multilingual"                     # Name of the example
path = "examples/multilingual_example.rs" # Path to the example file

[[example]]
# Plugin pipeline example — SEO, search, minify, live-reload.
name = "plugins"                          # Name of the example
path = "examples/plugins_example.rs"      # Path to the example file

# -----------------------------------------------------------------------------
# Documentation Configuration
# -----------------------------------------------------------------------------
[package.metadata.docs.rs]
# Settings for building and hosting documentation on docs.rs.
all-features = true                         # Build documentation with all features enabled
rustdoc-args = ["--cfg", "docsrs"]          # Arguments passed to `rustdoc` when building the documentation
targets = ["x86_64-unknown-linux-gnu"]      # Default target platform for the docs

# -----------------------------------------------------------------------------
# Linting Configuration
# -----------------------------------------------------------------------------
[lints.rust]
# Linting rules for the project.

## Warnings
missing_copy_implementations = "warn"       # Warn if types can implement `Copy` but don’t
missing_docs = "warn"                       # Warn if public items lack documentation
unstable_features = "warn"                  # Warn on the usage of unstable features
unused_extern_crates = "warn"               # Warn about unused external crates
unused_results = "warn"                     # Warn if a result type is unused (e.g., errors ignored)

## Allowances
bare_trait_objects = "allow"                # Allow bare trait objects (e.g., `Box<dyn Trait>`)
elided_lifetimes_in_paths = "allow"         # Allow lifetimes to be elided in paths
non_camel_case_types = "allow"              # Allow non-camel-case types
non_upper_case_globals = "allow"            # Allow non-uppercase global variables
trivial_bounds = "allow"                    # Allow trivial bounds in trait definitions
unsafe_code = "forbid"                       # Forbid the usage of unsafe code blocks

## Forbidden
missing_debug_implementations = "forbid"    # Forbid missing `Debug` implementations
non_ascii_idents = "forbid"                 # Forbid non-ASCII identifiers
unreachable_pub = "forbid"                  # Forbid unreachable `pub` items

## Denials
dead_code = "deny"                          # Deny unused, dead code in the project
deprecated_in_future = "deny"               # Deny code that will be deprecated in the future
ellipsis_inclusive_range_patterns = "deny"  # Deny usage of inclusive ranges in match patterns (`...`)
explicit_outlives_requirements = "deny"     # Deny unnecessary lifetime outlives requirements
future_incompatible = { level = "deny", priority = -1 } # Handle future compatibility issues
keyword_idents = { level = "deny", priority = -1 }      # Deny usage of keywords as identifiers
macro_use_extern_crate = "deny"             # Deny macro use of `extern crate`
meta_variable_misuse = "deny"               # Deny misuse of meta variables in macros
noop_method_call = "deny"                   # Deny method calls that have no effect
rust_2018_idioms = { level = "deny", priority = -1 }    # Enforce Rust 2018 idioms
rust_2021_compatibility = { level = "deny", priority = -1 } # Enforce Rust 2021 compatibility
single_use_lifetimes = "deny"               # Deny lifetimes that are used only once
trivial_casts = "deny"                      # Deny trivial casts (e.g., `as` when unnecessary)
trivial_numeric_casts = "deny"              # Deny trivial numeric casts (e.g., `i32` to `i64`)
unused = { level = "deny", priority = -1 }  # Deny unused code, variables, etc.
unused_features = "deny"                    # Deny unused features
unused_import_braces = "deny"               # Deny unnecessary braces around imports
unused_labels = "deny"                      # Deny unused labels in loops
unused_lifetimes = "deny"                   # Deny unused lifetimes
unused_macro_rules = "deny"                 # Deny unused macros
unused_qualifications = "deny"              # Deny unnecessary type qualifications
variant_size_differences = "deny"           # Deny enum variants with significant size differences

# -----------------------------------------------------------------------------
# Clippy Configuration
# -----------------------------------------------------------------------------
[lints.clippy]
# Clippy lint configuration for enhanced code analysis.

## Warnings
all = { level = "warn", priority = -1 }      # Enable all common Clippy lints
pedantic = { level = "warn", priority = -1 } # Enable pedantic lints for stricter checking
cargo = { level = "warn", priority = -1 }    # Enable lints specific to cargo
nursery = { level = "warn", priority = -1 }  # Enable experimental lints from Clippy’s nursery
complexity = { level = "warn", priority = -1 } # Warn on code complexity and suggest improvements
correctness = { level = "warn", priority = -1 } # Ensure code correctness, flagging potential issues
perf = { level = "warn", priority = -1 }     # Lints that catch performance issues
style = { level = "warn", priority = -1 }    # Suggest stylistic improvements
suspicious = { level = "warn", priority = -1 } # Detect suspicious code patterns
module_name_repetitions = "warn"             # Avoid repeating module names in the crate name

## Allowances
module_inception = "allow"                   # Allow modules with the same name as their parents
too_many_arguments = "allow"                 # Allow functions with more than 7 arguments if justified
missing_docs_in_private_items = "allow"      # Skip requiring documentation for private items
multiple_crate_versions = "allow"            # Transitive duplicates from staticdatagen/tera/scraper — not actionable from this repo

## Denials — warn level so tests can use unwrap/expect; CI lint enforces on lib
unwrap_used = "warn"                         # Warn on unwrap to encourage error handling
expect_used = "warn"                         # Warn on expect to encourage error handling

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------
[profile.dev]
# Development profile configuration for fast builds and debugging.
codegen-units = 16                          # Balance between compile speed and disk usage (256 creates massive target dirs)
debug = 1                                   # Line tables only — saves ~60% disk vs full debuginfo
debug-assertions = true                     # Enable debug assertions
incremental = true                          # Enable incremental compilation
lto = false                                 # Disable link-time optimization for development
opt-level = 0                               # No optimizations in development
overflow-checks = true                      # Enable overflow checks for arithmetic operations
panic = 'unwind'                            # Enable unwinding for panics (useful in development)
rpath = false                               # Disable rpath generation
strip = false                               # Do not strip symbols in development builds

[profile.release]
# Release profile configuration for optimized builds.
codegen-units = 1                           # Reduce codegen units for better performance
debug = false                               # Disable debug symbols in release builds
debug-assertions = false                    # Disable debug assertions
incremental = false                         # Disable incremental compilation for optimal binary size
lto = true                                  # Enable link-time optimization for smaller and faster binaries
opt-level = 3                               # Optimize for runtime speed
overflow-checks = true                      # Enable overflow checks for safety
panic = "abort"                             # Use abort on panic for minimal overhead
rpath = false                               # Disable rpath generation
strip = "symbols"                           # Strip symbols for smaller binary size

[profile.test]
# Test profile configuration for debugging and development.
codegen-units = 16                          # Balance between compile speed and disk usage
debug = 1                                   # Line tables only — enough for backtraces, saves disk
debug-assertions = true                     # Enable debug assertions for tests
incremental = true                          # Enable incremental compilation for tests
lto = false                                 # Disable link-time optimization during testing
opt-level = 0                               # No optimizations in test builds
overflow-checks = true                      # Enable overflow checks for tests
rpath = false                               # Disable rpath generation
strip = false                               # Do not strip symbols in test builds

# -----------------------------------------------------------------------------
# Patch: replace upstream serde_yml (which uses unsafe libyml) with a local
# safe-only implementation.
# -----------------------------------------------------------------------------
[patch.crates-io]
serde_yml = { path = "crates/serde_yml" }
